; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/pwc/extr_pwc-ctrl.c_pwc_set_colour_mode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/pwc/extr_pwc-ctrl.c_pwc_set_colour_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pwc_device = type { i32 }

@SET_CHROM_CTL = common dso_local global i32 0, align 4
@COLOUR_MODE_FORMATTER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pwc_set_colour_mode(%struct.pwc_device* %0, i32 %1) #0 {
  %3 = alloca %struct.pwc_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8, align 1
  store %struct.pwc_device* %0, %struct.pwc_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  store i8 -1, i8* %5, align 1
  br label %10

9:                                                ; preds = %2
  store i8 0, i8* %5, align 1
  br label %10

10:                                               ; preds = %9, %8
  %11 = load %struct.pwc_device*, %struct.pwc_device** %3, align 8
  %12 = load i32, i32* @SET_CHROM_CTL, align 4
  %13 = load i32, i32* @COLOUR_MODE_FORMATTER, align 4
  %14 = call i32 @send_control_msg(%struct.pwc_device* %11, i32 %12, i32 %13, i8* %5, i32 1)
  ret i32 %14
}

declare dso_local i32 @send_control_msg(%struct.pwc_device*, i32, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
